# temporary-1

./: README.md
avito-chat-bot/: .editorconfig  .gitignore  Cargo.toml  Dockerfile  README.md  bun.lockb  package.json
avito-chat-bot/src/: avito.rs  main.rs
avito-chat-bot/src/models/: __diesel_schema_migrations.rs  __diesel_schema_migrations_db_set.rs  answers.rs  answers_db_set.rs  av_ads.rs  av_ads_db_set.rs  av_answers.rs  av_answers_db_set.rs  av_operations.rs  av_operations_db_set.rs  av_questionnaires.rs  av_questionnaires_db_set.rs  av_questions.rs  av_questions_db_set.rs  avito.rs  avito_chats.rs  avito_chats_db_set.rs  avito_db_set.rs  customers.rs  customers_db_set.rs  department_users.rs  department_users_db_set.rs  departments.rs  departments_db_set.rs  example_op_names.rs  example_op_names_db_set.rs  instruments.rs  instruments_db_set.rs  instruments_log.rs  instruments_log_db_set.rs  mod.rs
mobile-app-frontend/: .editorconfig  .gitignore  Cargo.toml  build.sh  debug-build.sh  index.html  start.sh
mobile-app-frontend/src/: main.rs  router.rs  state.rs  utils.rs
mobile-app-frontend/src/api/: accept_task.rs  add_test_task.rs  cancel_task.rs  change_finished_operation.rs  change_pause.rs  decline_task.rs  finish_operation.rs  finish_operations.rs  finished_tasks.rs  instruments.rs  login.rs  materials.rs  mod.rs  new_tasks.rs  taken_tasks.rs  tasks_count.rs
mobile-app-frontend/src/components/: active_operation_actions.rs  finished_operation.rs  float_active_operation_actions.rs  general_active_operation_actions.rs  mod.rs  pauses_list.rs  simple_operation.rs  stamp.rs  work_float_operation.rs  work_general_operation.rs
mobile-app-frontend/src/models/: alarm_data.rs  auth.rs  auth_result.rs  cancel_task_body.rs  change_finished_operation_params.rs  change_pause_params.rs  current_operation.rs  instrument.rs  material.rs  mod.rs  operation.rs  operation_result.rs  pause.rs  plan.rs  task.rs  user.rs
mobile-app-frontend/src/pages/: mod.rs
mobile-app-frontend/src/pages/mobile/: auth.rs  cancel_task.rs  change_finished_operation.rs  change_pause.rs  finish_auto_operation.rs  finish_floating_operation.rs  finish_general_operation.rs  (+12 more)
mobile-app-frontend/static/: alarm.js  main.js  styles.css
mobile-app-frontend/testing/: package.json  playwright.config.js  pnpm-lock.yaml
mobile-app-frontend/testing/tests/: 1.spec.js  auth.setup.js
programming-tasks-runner-backend/: Cargo.toml  Dockerfile  adm.cmd  cargo-run.cmd  languages-linux.toml  languages-windows.toml  show-versions.sh
programming-tasks-runner-backend/langs/: _languages.lua  cpp.lua  csharp.lua  d.lua  javascript.lua  kotlin.lua  rust.lua  typescript.lua  vlang.lua
programming-tasks-runner-backend/src/: main.rs  test_runner.rs
(+1 files in other folders)
