[package]
name = "avito_extrabot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.5.1"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
enclose = "1.1.8"
env_logger = "0.11.3"
log = "0.4.21"
log-derive = "0.4.1"
maplit = "1.0.2"
nestify = "0.3.3"
reqwest = { version = "0.11.26", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-rustls", "postgres"] }
teloxide = { version = "0.12.2", features = ["macros"] }
tokio = { version = "1.37.0", features = ["time", "tokio-macros"] }
