[package]
name = "lernu-runner"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple-process-stats = "*"
tokio = { version = "*", features = ["full"] }
sysinfo = "0.18.0"
tokio-util = { version = "*", features = ["codec"] }
anyhow  = "*"
thiserror = "*"
actix-web =  "*"
actix-rt = "*"
serde_json = "*"
serde = "*"
serde_derive = "*"
unwrap_or = "*"
chrono = "*"
rlua = "*"
toml = "*"
derive_more = "*"
envy = "*"